@@ -1,5 +1,7 @@
 2002-10-23  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/dialogs/align.c: Removed libglade dependency
+
 	* src/toolbox.c: Removed libglade dependency
 
 2002-10-22  Lauris Kaplinski  <lauris@kaplinski.com>
